Closed Bug 1318007 Opened 9 years ago Closed 9 years ago

Can't zoom large PNG

Categories

(Core :: Graphics: ImageLib, defect, P3)

51 Branch
x86
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- unaffected
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: afmenez, Assigned: milan)

References

()

Details

(Keywords: regression, Whiteboard: [gfx-noted])

Attachments

(1 file)

I can load the following image fine on released FFox 50, and when I zoom in it displays fine: http://winapp2.com/dropbox/2016-11-14_151443.png If I do this on today's Nightly (16/nov/16), it loads the image but hangs when I try to zoom in.
Assignee: nobody → milan
Priority: -- → P3
Whiteboard: [gfx-noted]
Version: 53 Branch → 51 Branch
I'm thinking that after bug 1224254 (which makes ~500M the maximum allocation size), we can increase the limit on each dimension; perhaps even remove it? I understand pixman has issues with > 32k when printing. A 500M allocation size would let us have approximately a 32k x 4k image - it seems that allowing 128k x 1k should not be much worse, except for the short overflow, so it shouldn't be done lightly.
See Also: → 944579, 1224254
Flags: needinfo?(milan)
Comment on attachment 8812828 [details] Bug 1318007: When the surface is already allocated, just check for non-positive dimensions. https://reviewboard.mozilla.org/r/94416/#review94646
Attachment #8812828 - Flags: review?(aosmond) → review+
Pushed by msreckovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/86f37704bbf8 When the surface is already allocated, just check for non-positive dimensions. r=aosmond
Comment on attachment 8812828 [details] Bug 1318007: When the surface is already allocated, just check for non-positive dimensions. Approval Request Comment [Feature/regressing bug #]: bug 1299164 (in 51) [User impact if declined]: Large images (>32k in one dimension) are not drawn [Describe test coverage new/current, TreeHerder]: There may be more tests in bug 591822 [Risks and why]: [String/UUID change made/needed]: This is a partial revert of the patch in bug 1299164 that regressed this.
Flags: needinfo?(milan)
Attachment #8812828 - Flags: approval-mozilla-beta?
Attachment #8812828 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment on attachment 8812828 [details] Bug 1318007: When the surface is already allocated, just check for non-positive dimensions. Fix a large PNG zooming issue. Beta51+ and Aurora52+. Should be in 51 beta 3.
Attachment #8812828 - Flags: approval-mozilla-beta?
Attachment #8812828 - Flags: approval-mozilla-beta+
Attachment #8812828 - Flags: approval-mozilla-aurora?
Attachment #8812828 - Flags: approval-mozilla-aurora+
Flags: in-qa-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: