Bug 1318007 - When the surface is already allocated, just check for non-positive dimensions. r=aosmond, a=gchang

MozReview-Commit-ID: C0Fkq1SVO3s